minor fix text align Translation for RTL languages

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -180,9 +180,10 @@ li em{
     line-height: 1.7;
     clear: both;
     width: 100%;
+    font-family: uthmani, Traditional Arabic;
   }
 }
-.persian{
+.lang-dir-rtl{
   text-align: right;
   direction: rtl;
 }
